# rusty_weather

./: Cargo.toml  README.md  example_output.txt  example_weather.json
src/: main.rs  weather_data.rs
