[package]
name = "weather_cli_rust"
version = "0.1.0"
edition = "2018"
authors = ["Eric Thomas"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.144"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.21.1", features = ["full"] }
serde_derive = "1.0.144"
chrono = "0.4.22"
exitfailure = "0.5.1"